Bug 753167 - Pango script crashes

https://bugzilla.gnome.org/show_bug.cgi?id=753167